adds random pictures and ability to change pictures with click

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <h1>Bus Mall Marketing Survey</h1>
   </header>
   <main>
-    <img id="surveyPic0" src="" alt="" title="">
-    <img id="surveyPic1" src="" alt="" title="">
-    <img id="surveyPic2" src="" alt="" title="">
+    <section id="picSection">
+      <img id="surveyPic0" src="" alt="" title="">
+      <img id="surveyPic1" src="" alt="" title="">
+      <img id="surveyPic2" src="" alt="" title="">
+    </section>
   </main>
 
   <script src="js/app.js"></script>
