--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <h1>Bus Mall Marketing Survey</h1>
   </header>
   <main>
+    <section>
+      <p>Thank you for participating in our marketing survey. You will be shown a list of 3 products that might be shown in our future catalog. Please click on the image of the product you like the most. There will be 25 comparisons between 20 different products. Thank you for your participation!</p>
+    </section>
     <section id="picSection">
       <img id="surveyPic0" src="" alt="" title="">
       <img id="surveyPic1" src="" alt="" title="">
       <img id="surveyPic2" src="" alt="" title="">
     </section>
+    <ul id="ulpics"></ul>
   </main>
 
   <script src="js/app.js"></script>
