adds links between html pages and slight changes to the table

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   </header>
   <main>
     <section>
-      <p>Thank you for participating in our marketing survey. You will be shown a list of 3 products that might be shown in our future catalog. Please click on the image of the product you like the most. There will be 25 comparisons between 20 different products. Thank you for your participation!</p>
+      <p>
+        Thank you for participating in our marketing survey. You will be shown a list of 3 products that might be shown in our future catalog. Please click on the image of the product you like the most. There will be 25 comparisons between 20 different products. Thank you for your participation!
+        <a href="table.html">Click here to see which products we recommend!</a>
+      </p>
     </section>
     <section id="picSection">
       <img id="leftPic" src="" alt="" title="">
