--- a/table.html
+++ b/table.html
@@ -14,6 +14,9 @@
     <h1>Bus Mall Marketing Survey Table</h1>
   </header>
   <main>
+    <p>
+      <a href="index.html">Click here to participate in our survey!</a>
+    </p>
     <table id="tablePics"></table>
   </main>
 
